// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
  id={null}
  rows={null}
>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
    id={null}
    label="Tag"
    onClick={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
      cursor="default"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Tag
    </label>
  </span>
</section>
`;

exports[` 2`] = `
Array [
  <div
    className="Bar__BarLayout-icfo76-2 eIFIfS"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 kWRDZo"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Brief Label"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Brief Label
        </label>
      </span>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-icfo76-2 eIFIfS"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eizlsd"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Tag with a long label because you cannot be concise with your words."
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag with a long label because you cannot be concise with your words.
        </label>
      </span>
    </div>
  </div>,
]
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 huKtjk"
  id={null}
  rows={null}
>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 cTlzw"
    id={null}
    label="Info"
    onClick={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
      cursor="default"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Info
    </label>
  </span>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 kKdtCs"
    id={null}
    label="Warning"
    onClick={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
      cursor="default"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Warning
    </label>
  </span>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 fXnXWY"
    id={null}
    label="Success"
    onClick={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
      cursor="default"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Success
    </label>
  </span>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 cFDLHF"
    id={null}
    label="Alert"
    onClick={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 bfvBPo"
      cursor="default"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Alert
    </label>
  </span>
</section>
`;

exports[` 4`] = `
<span
  className="Tag__TagContainer-sc-128kb3h-0 fMJIuC"
  id={null}
  label={null}
  onClick={null}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 CCPOD"
    color="neutral20"
    data-icon="times"
    data-prefix="far"
    focusable="false"
    fontSize="0.875em"
    id={null}
    role="img"
    style={Object {}}
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</span>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 eKCPnc"
    id={null}
    label="Icon on Left"
    onClick={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jShaZa"
      cursor="inherit"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Icon on Left
    </label>
    <div
      className="Tag__TagIconContainer-sc-128kb3h-1 bLTKNJ"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eaguTr"
        color="neutral20"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="0.75em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </span>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 dzXtuY"
    id={null}
    label="Icon on Left"
    onClick={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jShaZa"
      cursor="inherit"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Icon on Left
    </label>
    <div
      className="Tag__TagIconContainer-sc-128kb3h-1 fXpulc"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eaguTr"
        color="neutral20"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="0.75em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </span>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 dzXtuY"
    id={null}
    label="Icon on Left"
    onClick={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jShaZa"
      cursor="inherit"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Icon on Left
    </label>
    <div
      className="Tag__TagIconContainer-sc-128kb3h-1 dBnGxx"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eaguTr"
        color="neutral20"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="0.75em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </span>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 euvBPY"
    id={null}
    label="Icon on Right"
    onClick={null}
  >
    <div
      className="Tag__TagIconContainer-sc-128kb3h-1 kQsvbR"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eaguTr"
        color="neutral20"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="0.75em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jShaZa"
      cursor="inherit"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Icon on Right
    </label>
  </span>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 dzXtuY"
    id={null}
    label="Icon on Right"
    onClick={null}
  >
    <div
      className="Tag__TagIconContainer-sc-128kb3h-1 lfQbpj"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eaguTr"
        color="neutral20"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="0.75em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jShaZa"
      cursor="inherit"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Icon on Right
    </label>
  </span>
  <span
    className="Tag__TagContainer-sc-128kb3h-0 dzXtuY"
    id={null}
    label="Icon on Right"
    onClick={null}
  >
    <div
      className="Tag__TagIconContainer-sc-128kb3h-1 dQMkwG"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eaguTr"
        color="neutral20"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="0.75em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jShaZa"
      cursor="inherit"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Icon on Right
    </label>
  </span>
</section>
`;
